# Bryggargatan_betalning

./: .gitignore  bryggargatan.html  bryggargatan.txt  dishes.json
Mockup_GIMP/: MenyMockup1.xcf  MenyMockup2.xcf
PaymentServer/: Client.cs  DummySwishRequest.cs  EmailSender.cs  Order.cs  PaymentServer.sln  Program.cs  Result.cs  UpgradeLog.htm  WebbappResponse.cs
PaymentServer/Properties/: launchSettings.json
PaymentServerJava/: email_credentials.txt
PaymentServerJava/src/paymentserver/: Client.java  DummySwishCallback.java  DummySwishRequest.java  EmailSender.java  Order.java  Program.java  Result.java  WebbappResponse.java
dummy_server/: CMakeLists.txt  compile_commands.json
dummy_server/src/: linked_list.c  linked_list.h  main.c  socket.h
test_server/: CMakeLists.txt
test_server/src/: main.c  socket.c
www/: Gruntfile.js  dishes.json  index.html  tsconfig.json
www/css/: button.css  expand.css  fonts.css  menu.css  notification.css  phonenr.css  phonenrprompt.css  popup.css  summary.css  tableid.css  tableidprompt.css
www/ts/: buttons.ts  dish.ts  dishparsing.ts  expand.ts  main.ts  notification.ts  popup.ts  selected_item.ts  send_to_server.ts  url_query.ts
